--- a/src/components/startups/startups.module.scss
+++ b/src/components/startups/startups.module.scss
@@ -242,10 +242,19 @@
   }
 }
 
+.display .container .text {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+}
+
 .display .container img {
   width: 50%;
+  margin-right: 1em;
   @media only screen and (max-width: 1100px) {
     width: 100%;
+    margin-right: 0;
   }
 }
 
@@ -426,6 +435,7 @@
 
 .review .container .image {
   width: 50%;
+  height: 50%;
   @media (max-width: 1050px) {
     width: 100%;
   }
