--- a/src/components/home-page/home-page.module.scss
+++ b/src/components/home-page/home-page.module.scss
@@ -63,6 +63,7 @@
   display: flex;
   flex-direction: row;
   @media screen and (max-width: 1100px) {
+    padding: 3em;
     flex-direction: column;
   }
   gap: 4.5em;
@@ -85,11 +86,17 @@
       color: white;
       margin-bottom: 1.5em;
       font-family: $header-font;
+      @media screen and (max-width: 1100px) {
+        font-size: 1.5em;
+      }
     }
 
     p {
       font-size: 1.3em;
       color: white;
+      @media screen and (max-width: 1100px) {
+        font-size: 1em;
+      }
     }
 
     .criteria {
@@ -580,7 +587,13 @@
   flex-direction: column;
   align-items: center;
   padding: 1em 0;
-  background-color: #e0dfea;
+  background-repeat: no-repeat;
+  background-origin: padding-box;
+  background-clip: border-box;
+  background-position: 50% 50%;
+  background-size: cover;
+  background-attachment: scroll;
+  background-image: url("/src/assets/landing_page/Webelement-1.png");
   border-radius: 5px;
 }
 
