--- a/src/components/home-page/home-page.module.scss
+++ b/src/components/home-page/home-page.module.scss
@@ -62,6 +62,8 @@
   padding: 6em;
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
   @media screen and (max-width: 1100px) {
     padding: 3em;
     flex-direction: column;
@@ -92,7 +94,7 @@
     }
 
     p {
-      font-size: 1.3em;
+      font-size: 1em;
       color: white;
       @media screen and (max-width: 1100px) {
         font-size: 1em;
@@ -442,6 +444,52 @@
 }
 
 .vision-image {
+  width: 50%;
+
+  @media only screen and (max-width: $mobile-width) {
+    width: 100%;
+  }
+}
+
+.impact {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  @media only screen and (max-width: $mobile-width) {
+    flex-direction: column;
+    row-gap: 2em;
+  }
+}
+
+.impact-text {
+  padding: 2.5em;
+  background-color: #2F2B6F;
+  width: 50%;
+  height: fit-content;
+  margin: auto;
+  border-radius: 5px;
+  color: white;
+  @media only screen and (max-width: $mobile-width) {
+    width: 100%;
+  }
+}
+
+.impact-text .h1 {
+  font-family: $header-font;
+  font-size: 28px;
+  font-weight: 600;
+  margin-bottom: 1em;
+}
+
+.impact-text .p {
+  font-family: Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  margin-bottom: 2.5em;
+}
+
+.impact-image {
   width: 50%;
 
   @media only screen and (max-width: $mobile-width) {
