task 3: review section mod

--- a/src/components/startups/startups.module.scss
+++ b/src/components/startups/startups.module.scss
@@ -12,8 +12,8 @@
   background-color: #0b0b09;
   color: white;
 
-   //padding problem under 370px
-   @media (max-width: 370px) {
+  //padding problem under 370px
+  @media (max-width: 370px) {
     padding: 3em 2em;
   }
 }
@@ -394,11 +394,11 @@
   align-items: center;
   flex-direction: row;
   justify-content: center;
-  column-gap: 4em;
+  gap: 4em;
   margin-bottom: 5em;
   @media (max-width: 1050px) {
     margin-bottom: 2em;
-    column-gap: 2em;
+    gap: 2em;
   }
 }
 
@@ -410,11 +410,11 @@
 }
 
 .review .header .p {
-  font-family: Helvetica, sans-serif;
-  font-size: 1em;
+  font-family: $paragraph-font;
+  font-size: 1.2em;
   font-weight: 300;
   color: #4a555c;
-  margin-top: 2em;
+
   width: 50%;
 }
 
